@@ -261,7 +261,7 @@ class Testimonials_Widget {
 
 	public function admin_notices() {
 		$content  = '';
-		$content .= '<div class="error"><p>';
+		$content .= '<div class="updated"><p>';
 		$content .= sprintf( __( 'If your Testimonials Widget display has gone to funky town, please <a href="%s">read the FAQ</a> about possible CSS fixes.', 'testimonials-widget-premium', 'testimonials-widget' ), 'http://wordpress.org/extend/plugins/testimonials-widget/faq/' );
 		$content .= '</p></div>';
 
